update to build 0.1.7